change link to prj

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 <hr class="line"/>
 <p class="footer">
     This page was built by
-    <a href="https://www.instagram.com/_allusyak_/" target="_blank">
+    <a href="https://github.com/allusyakarpenko/weather" target="_blank">
         Alla Karpenko
     </a>
 </p>
