--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <div class="weather__data">
 
                         <div class="weather__pic">
-                            <div class="circle-l">
+                            <div id="main-icon" class="circle-l">
                                 &#9728;&#65039;
                             </div>
                         </div>
@@ -52,15 +52,20 @@
                             <div class="weather__deg">
                                 +28&deg / +18&deg
                             </div>
+                            <div class="weather__units">
+                                <span class="unit__c">C&deg</span> / <span class="unit__f">F&deg</span>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="col-4">
                 <div class="border__inner">
-                    Precipitation: 44%
-                    </br>
-                    Wind: 6 km/h
+                    <div class="weather_addl">
+                        Precipitation: 44%
+                        </br>
+                        Wind: 6 km/h
+                    </div>
                 </div>
             </div>
         </div>
